fix(APISIMP-PAGE-PARAM-ANNOTATION-INCONSISTENCY): push notification + lab-journal pagination to Cypher (#2304)
**NotificationRest / NotificationDAO / NotificationService:**
- `NotificationDAO.listForUser(String, boolean)` replaced with
  `listForUser(String, boolean, int skip, int limit)` — SKIP/LIMIT
  pushed to Cypher instead of Java `subList`.
- New `NotificationDAO.countForUser(String, boolean)` — `count(n)` query
  for the `X-Total-Count` header without fetching all rows.
- `NotificationService` gains the two bounded delegates.
- `NotificationRest.list()` calls `countForUser` + `listForUser(skip, pageSize)`;
  no more in-memory `subList`. Stale "Service cap: 200 rows" note removed
  from OpenAPI description.

**CollectionLabJournalEntriesRest / CollectionLabJournalEntriesDAO:**
- New `CollectionLabJournalEntriesDAO.countByCollectionAppId(String)` —
  `count(DISTINCT lje)` query.
- New `CollectionLabJournalEntriesDAO.findByCollectionAppId(String, int, int)`
  — same MATCH/WHERE/WITH DISTINCT as the full-load variant, but
  `ORDER BY lje.createdAt DESC, id(lje) DESC SKIP $skip LIMIT $limit`
  is injected BEFORE the path-expansion step so the OGM hydrates only
  the page's entries.
- Old `findByCollectionAppId(String)` marked `@Deprecated`; kept for
  back-compat with any existing callers.
- `CollectionLabJournalEntriesRest.list()` calls count + bounded fetch;
  no more full-load + Java `subList`. Orphan-skip loop kept as a
  defensive belt-and-braces.

**Tests:**
- `NotificationRestTest`, `NotificationServiceTest` updated to mock the
  new bounded service/DAO signatures.
- `CollectionLabJournalEntriesRestTest` updated to mock
  `countByCollectionAppId` + `findByCollectionAppId(appId, skip, limit)`.


Claude-Session: https://claude.ai/code/session_014TRQVmaGnyEb8ooszAi2vQ

Co-authored-by: Claude <noreply@anthropic.com>